--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "PORT=4000 nodemon app.js"
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/GauthierLory/nodejs-twitter#readme",
   "dependencies": {
+    "autoprefixer": "^10.2.4",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
-    "pug": "^3.0.0"
+    "postcss": "^8.2.4",
+    "pug": "^3.0.0",
+    "tailwindcss": "^2.0.2"
   }
 }
