--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "autoprefixer": "^10.2.4",
     "express": "^4.17.1",
+    "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "postcss": "^8.2.4",
