--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "SET NODE_ENV=development & nodemon app.js",
+    "start:prod": "SET NODE_ENV=production nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/GauthierLory/nodejs-twitter#readme",
   "dependencies": {
     "autoprefixer": "^10.2.4",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
