--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
   "homepage": "https://github.com/GauthierLory/nodejs-twitter#readme",
   "dependencies": {
     "autoprefixer": "^10.2.4",
+    "bcrypt": "^5.0.0",
+    "connect-mongo": "^4.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
     "postcss": "^8.2.4",
     "pug": "^3.0.0",
     "tailwindcss": "^2.0.2"
