--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "postcss": "^8.2.4",
     "pug": "^3.0.0",
     "tailwindcss": "^2.0.2"
