--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.2.4",
     "bcrypt": "^5.0.0",
     "connect-mongo": "^4.2.0",
+    "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -32,7 +33,7 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "postcss": "^8.2.4",
-    "pug": "^3.0.0",
+    "pug": "^3.0.2",
     "tailwindcss": "^2.0.2"
   }
 }
